--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -239,9 +239,11 @@
             - name: Azure Functions
               displayname: 'functions, monitor functions, automation'
               href: ../azure-functions/functions-monitoring.md
-            - name: Kubernetes 应用程序
-              displayname: 'aks, microservice, istio, service mesh, application monitoring, monitor kubernetes, monitor aks'
-              href: app/kubernetes.md
+            - name: Azure Kubernetes 服务
+              items:
+                - name: Kubernetes（已弃用）
+                  displayname: 'aks, microservice, istio, service mesh, application monitoring, monitor kubernetes, monitor aks'
+                  href: app/kubernetes.md
             - name: 独立 - 任何环境
               items:
                 - name: Java（预览版）
@@ -272,8 +274,10 @@
                       href: app/monitor-performance-live-website-now.md
                 - name: Java
                   href: app/java-on-premises.md
-        - name: 创建资源
+        - name: 创建资源（经典）
           href: app/create-new-resource.md
+        - name: 创建资源（基于工作区）
+          href: app/create-workspace-resource.md
         - name: 应用程序仪表板
           displayname: 'dashboard, Application Insights dashboard'
           href: app/overview-dashboard.md
@@ -282,7 +286,7 @@
           href: app/app-map.md
         - name: 事务诊断
           href: app/transaction-diagnostics.md
-          displayname: 'e2e, end-to-end, component, dependency, cross-compoent transaction, operation ID, dependencies'
+          displayname: 'e2e, end-to-end, component, dependency, cross-component transaction, operation ID, dependencies'
         - name: 可用性
           items:
             - name: URL 测试
@@ -526,8 +530,12 @@
               href: platform/resource-logs-blob-format.md
         - name: 将数据流式传输到事件中心
           href: platform/stream-monitoring-data-event-hubs.md
+        - name: 监视 Key Vault
+          href: insights/key-vaults-insights-overview.md
         - name: 更改分析
           href: app/change-analysis.md
+        - name: Azure Cache for Redis（预览版）
+          href: insights/redis-cache-insights-overview.md
     - name: 监视 VM 和来宾 OS
       items:
         - name: 监视 Azure 虚拟机
@@ -1204,6 +1212,8 @@
               href: app/data-model-context.md
             - name: 与 Azure Functions 集成
               href: app/azure-functions-supported-features.md
+            - name: 基于工作区的架构
+              href: app/apm-tables.md
     - name: 指标
       items:
         - name: 支持的指标
