--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: hub-page
   ms.date: 03/24/2020
   ms.author: trbye
-  ms.openlocfilehash: d1eb706e7156d2444d995904b0a0fecc0a76f4e5
-  ms.sourcegitcommit: ac4a365a6c6ffa6b6a5fbca1b8f17fde87b4c05e
+  ms.openlocfilehash: c065f3d12f98be85f45ed6233593d9ccab1cefa1
+  ms.sourcegitcommit: a8ee9717531050115916dfe427f84bd531a92341
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/10/2020
-  ms.locfileid: "83005134"
+  ms.lasthandoff: 05/12/2020
+  ms.locfileid: "83201652"
 highlightedContent:
   items:
   - title: 什么是语音服务？
@@ -119,6 +119,17 @@ conceptualContent:
     footerLink:
       text: 查看详细信息
       url: index-voice-assistants.yml
+  - title: 工具
+    links:
+    - itemType: overview
+      text: 关于 SPX - 无需编写代码即可使用语音服务
+      url: spx-overview.md
+    - itemType: how-to-guide
+      text: SPX 基础知识
+      url: spx-basics.md
+    - itemType: overview
+      text: 关于 Speech Studio - 无代码语音服务自定义
+      url: https://speech.microsoft.com
   - title: Hosting
     links:
     - itemType: how-to-guide
