--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -25,6 +25,8 @@
       href: quickstart-create-data-factory-rest-api.md
     - name: 创建数据工厂 - 资源管理器模板
       href: quickstart-create-data-factory-resource-manager-template.md
+    - name: 安全性 - 启用客户管理的密钥加密
+      href: quickstart-enable-customer-managed-key.md
     - name: 创建数据流
       href: data-flow-create.md
 - name: 教程
