--- a/articles/lab-services/classroom-labs/TOC.yml
+++ b/articles/lab-services/classroom-labs/TOC.yml
@@ -22,6 +22,8 @@
   items:
     - name: 教室实验室概念
       href: classroom-labs-concepts.md
+    - name: 教室实验室体系结构基础知识
+      href: classroom-labs-fundamentals.md
     - name: 方案
       items:
         - name: 将实验室用于上课
@@ -136,7 +138,7 @@
       href: 'https://azure.microsoft.com/updates/?product=lab-services'
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/lab-services/'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/questions/tagged/azure-lab-services'
+    - name: 技术社区论坛
+      href: 'https://techcommunity.microsoft.com/t5/azure-lab-services/bd-p/AzureLabServices'
     - name: 常见问题
       href: classroom-labs-faq.md
