--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -56,6 +56,8 @@
               href: data-box-portal-admin.md
             - name: 通过本地 Web UI 进行管理
               href: data-box-local-web-ui-admin.md
+            - name: 启用客户管理的密钥
+              href: data-box-customer-managed-encryption-key-portal.md
             - name: 将数据移到 blob 层
               href: data-box-how-to-set-data-tier.md
             - name: 为设备布线
@@ -173,6 +175,8 @@
               href: data-box-portal-admin.md
             - name: 通过本地 Web UI 进行管理
               href: data-box-local-web-ui-admin.md
+            - name: 启用客户管理的密钥
+              href: data-box-customer-managed-encryption-key-portal.md
             - name: 排查设备问题
               href: data-box-troubleshoot.md
             - name: 将数据移到 blob 层
