--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -315,6 +315,8 @@
           href: search-security-overview.md
         - name: 创建专用终结点
           href: service-create-private-endpoint.md
+        - name: 配置 IP 防火墙
+          href: service-configure-firewall.md
         - name: 服务密钥管理
           href: search-security-api-keys.md
         - name: 基于角色的管理员访问权限
