--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -162,6 +162,8 @@
               href: snapshots-overview.md
             - name: 更改源
               href: storage-blob-change-feed.md
+            - name: 时点还原
+              href: point-in-time-restore-overview.md
         - name: 访问层和性能层
           items:
             - name: 访问层级
@@ -379,7 +381,7 @@
               href: storage-blob-immutability-policies-manage.md
         - name: 管理数据冗余
           items:
-            - name: 更改复制数据的方式
+            - name: 更改冗余配置
               href: ../common/redundancy-migration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 设计具有高可用性的应用程序
               href: ../common/geo-redundant-design.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
@@ -393,6 +395,8 @@
               href: snapshots-manage-dotnet.md
             - name: 处理更改源日志
               href: storage-blob-change-feed-how-to.md
+            - name: 启用时间点还原
+              href: point-in-time-restore-manage.md
         - name: 管理灾难恢复
           items:
             - name: 检查“上次同步时间”属性
