--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -61,7 +61,7 @@
       "branch": "master"
     },
     {
-      "path_to_root": "_repo.zh-cn",
+      "path_to_root": "_repo.en-us",
       "url": "https://github.com/MicrosoftDocs/azure-docs-pr",
       "branch": "live",
       "branch_mapping": {}
