--- a/articles/cognitive-services/Speech-Service/index-speech-to-text.yml
+++ b/articles/cognitive-services/Speech-Service/index-speech-to-text.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Landing
 title: 语音转文本文档
-summary: 使用语音服务提供的语音转文本（也称为语音识别）功能，可将音频流实时听录为文本和批量听录为文本。
+summary: 使用语音服务提供的语音转文本（也称为语音识别）功能，可将音频流实时听录为文本和批量听录为文本。 通过其他参考文本输入，它还可实现实时发音评估，并为演讲音频提供精确和熟练的反馈。
 metadata:
   title: 语音转文本文档 - 教程和 API 参考 - Azure 认知服务 | Microsoft Docs
   titleSuffix: Azure Cognitive Services
@@ -11,12 +11,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 03/19/2020
   ms.author: trbye
-  ms.openlocfilehash: f496ba72f4f649a3ed5146f0b74caf3d8110adf9
-  ms.sourcegitcommit: a8ee9717531050115916dfe427f84bd531a92341
+  ms.openlocfilehash: be34def3c7aacc5419071028a3d3085fe69103fa
+  ms.sourcegitcommit: fdec8e8bdbddcce5b7a0c4ffc6842154220c8b90
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/12/2020
-  ms.locfileid: "83201914"
+  ms.lasthandoff: 05/19/2020
+  ms.locfileid: "83653478"
 landingContent:
 - title: 关于语音转文本
   linkLists:
@@ -38,6 +38,8 @@ landingContent:
       url: quickstarts/speech-to-text-from-file.md
     - text: 识别存储在 Blob 存储中的语音
       url: quickstarts/from-blob.md
+    - text: 带有引用输入的发音评估
+      url: rest-speech-to-text.md#pronunciation-assessment-parameters
 - title: 使用语音转文本进行开发
   linkLists:
   - linkListType: how-to-guide
