--- a/articles/active-directory/b2b/toc.yml
+++ b/articles/active-directory/b2b/toc.yml
@@ -1,12 +1,12 @@
-- name: Azure Active Directory B2B 文档
+- name: 外部标识文档
   href: index.yml
   items:
     - name: 概述
       items:
+        - name: 比较外部标识的解决方案
+          href: compare-with-b2c.md
         - name: 什么是 B2B 来宾用户访问权限？
           href: what-is-b2b.md
-        - name: 比较 B2B 与 B2C
-          href: compare-with-b2c.md
     - name: 快速入门
       items:
         - name: 在门户中添加来宾用户
@@ -48,16 +48,20 @@
           href: conditional-access.md
         - name: 适用于混合组织的 B2B
           href: hybrid-organizations.md
-        - name: 自助服务注册
+        - name: 外部标识的标识提供者
+          href: identity-providers.md
+        - name: 自助注册用户流（预览版）
+          href: self-service-sign-up-overview.md
+        - name: Azure AD 权利管理
           href: self-service-portal.md
         - name: 当前限制
           href: current-limitations.md
     - name: 操作指南
       expanded: true
       items:
-        - name: 管理 B2B 共享
+        - name: 配置外部共享
           href: delegate-invitations.md
-        - name: 管理邀请
+        - name: 邀请 B2B 用户
           items:
             - name: 管理员添加 B2B 用户
               href: add-users-administrator.md
@@ -65,20 +69,32 @@
               href: add-users-information-worker.md
             - name: 邀请内部用户使用 B2B 协作
               href: invite-internal-users.md
-            - name: Google 联合身份验证
-              href: google-federation.md
-            - name: 一次性密码身份验证
-              href: one-time-passcode.md
-            - name: 直接联合身份验证
-              href: direct-federation.md
-            - name: 使用 AD FS 进行直接联合身份验证的示例
-              href: direct-federation-adfs.md
             - name: 允许或阻止邀请
               href: allow-deny-list.md
             - name: 在没有邀请的情况下添加 B2B 用户
               href: add-user-without-invite.md
-            - name: API 和自定义
+            - name: 邀请 API 和自定义
               href: customize-invitation-api.md
+        - name: 与标识提供者联合
+          items:
+            - name: Google 联合身份验证
+              href: google-federation.md
+            - name: Facebook 联合身份验证
+              href: facebook-federation.md
+            - name: 直接联合身份验证
+              href: direct-federation.md
+            - name: 使用 AD FS 进行直接联合身份验证的示例
+              href: direct-federation-adfs.md
+        - name: 一次性密码身份验证
+          href: one-time-passcode.md
+        - name: 自助注册（预览版）
+          items:
+            - name: 添加自助注册用户流
+              href: self-service-sign-up-user-flow.md
+            - name: 定义自定义属性
+              href: user-flow-add-custom-attributes.md
+            - name: 自定义用户流语言
+              href: user-flow-customize-language.md
         - name: 管理来宾帐户
           items:
             - name: 将 B2B 用户添加到角色
@@ -123,7 +139,7 @@
           href: 'https://azure.microsoft.com/pricing/calculator/'
         - name: 服务更新
           href: 'https://azure.microsoft.com/updates/?product=active-directory'
-        - name: 堆栈溢出
+        - name: Stack Overflow
           href: 'https://stackoverflow.com/questions/tagged/azure-active-directory'
         - name: 视频
           href: 'https://azure.microsoft.com/documentation/videos/index/?services=active-directory'
