--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -88,6 +88,8 @@
           href: ipv6-overview.md
         - name: 公共 IPv6 地址前缀
           href: ipv6-public-ip-address-prefix.md
+        - name: 路由首选项
+          href: routing-preference-overview.md
     - name: 安全性
       items:
         - name: 网络安全组
@@ -222,6 +224,24 @@
               href: manage-public-ip-address-prefix.md
             - name: 在 NIC 中添加或删除 IP 地址
               href: virtual-network-network-interface-addresses.md
+            - name: 路由首选项
+              items:
+                - name: 创建公共 IP 地址
+                  items:
+                    - name: Azure 门户
+                      href: routing-preference-portal.md
+                    - name: Azure PowerShell
+                      href: routing-preference-powershell.md
+                    - name: Azure CLI
+                      href: routing-preference-cli.md
+                - name: 为 VM 配置 Internet 路由首选项
+                  items:
+                    - name: Azure 门户
+                      href: tutorial-routing-preference-virtual-machine-portal.md
+                    - name: Azure PowerShell
+                      href: configure-routing-preference-virtual-machine-powershell.md
+                    - name: Azure CLI
+                      href: configure-routing-preference-virtual-machine-cli.md
     - name: 安全性
       items:
         - name: 筛选网络流量
