--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -99,6 +99,9 @@
         - name: 移动应用
           tocHref: /azure/app-service-mobile/
           topicHref: /azure/app-service-mobile/
+    - name: 静态 Web 应用
+      tocHref: /azure/static-web-apps/
+      topicHref: /azure/static-web-apps/
     - name: 顾问
       tocHref: /azure/advisor/
       topicHref: /azure/advisor/
@@ -383,7 +386,7 @@
         - name: 文本分析
           tocHref: /azure/cognitive-services/text-analytics/
           topicHref: /azure/cognitive-services/text-analytics/
-        - name: 文本翻译
+        - name: 转换器
           tocHref: /azure/cognitive-services/translator/
           topicHref: /azure/cognitive-services/translator/
         - name: 视频索引器
@@ -767,9 +770,9 @@
     - name: SQL 数据库
       tocHref: /azure/sql-database/
       topicHref: /azure/sql-database/
-    - name: SQL Database Edge
-      tocHref: /azure/sql-database-edge/
-      topicHref: /azure/sql-database-edge/
+    - name: Azure SQL Edge
+      tocHref: /azure/azure-sql-edge/
+      topicHref: /azure/azure-sql-edge/
     - name: SQL Server Stretch Database
       tocHref: /azure/sql-server-stretch-database/
       topicHref: /azure/sql-server-stretch-database/
